<resources>

    <string name="app_name">Serials Manager</string>
    <string name="activity_title_settings" translatable="false">Settings</string>

    <!-- Menu's Buttons -->


    <!-- Edit Dialog's Texts -->
    <string name="dialog_title_add">Add Serial</string>
    <string name="dialog_title_edit">Edit</string>
    <string name="dialog_title_add_first_serial">Add Your First Serial</string>
    <string name="dialog_button_cancel_text" translatable="false">@android:string/cancel</string>
    <string name="dialog_button_save">Save</string>
    <string name="dialog_button_delete">Delete</string>


    <!-- Hints -->
    <string name="serial_item_hint_episode">Episode:</string>
    <string name="serial_item_hint_season">Season:</string>
    <string name="serial_item_hint_note">Note…</string>
    <string name="serial_item_hint_serial_name">Name</string>


    <!-- Serial Item Things -->
    <string name="serial_item_episode_per_season">Episodes per season:</string>
    <string name="serial_item_you_stopped">You stopped on:</string>
    <string name="serial_item_short_season" translatable="false">s</string>
    <string name="serial_item_short_episode" translatable="false">e</string>
    <string name="serial_item_button_plus_one_episode" translatable="false">+1e</string>


    <!-- Toast's Texts -->
    <string name="toast_empty_name">Please enter a name</string>
    <string name="toast_serial_already_exist">Serial already exist!</string>
    <string name="toast_serial_removed">removed</string>


    <!-- Other -->
    <string name="super_secret_password" translatable="false">PleaseRemoveAd</string>


    <!-- Preference Screen -->
    <string name="pref_msg_permissions_not_granted">Grant permission to change the settings</string>

    <string name="pref_screen_category_title_basic">Basic</string>
    <string name="pref_screen_category_title_storage">Storage</string>
    <string name="pref_screen_category_title_other">Other</string>

    <string name="pref_screen_title_sorting_order">Sorting Order</string>
    <string name="pref_screen_summary_sorting_order">Select sort method</string>
    <string name="pref_screen_key_sorting_order" translatable="false">sorting_order</string>

    <string name="pref_screen_title_new_episode_notification">Notification</string>
    <string name="pref_screen_summary_new_episode_notification">Notify me about new episodes</string>
    <string name="pref_screen_key_new_episode_notification" translatable="false">episodes_notifications</string>

    <string name="pref_screen_title_export">Export</string>
    <string name="pref_screen_dialog_title_export">Choose the file name</string>

    <string name="pref_screen_summary_export">Save episode list to your phone</string>
    <string name="pref_screen_key_export" translatable="false">export_database</string>

    <string name="pref_screen_title_import">Import</string>
    <string name="pref_screen_summary_import">Import episode list from phone</string>
    <string name="pref_screen_key_import" translatable="false">import_database</string>

    <string name="pref_screen_title_version">App Version</string>
    <string name="pref_screen_key_version" translatable="false">app_version</string>


    <!-- Navigation Drawer -->
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_serials">Serials</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_rate_app">Leave Rate</string>


    <!--  Rate Dialog -->
    <string name="rate_dialog_send_activity_title">Sending Feedback…</string>
    <string name="rate_dialog_msg_topic" translatable="false">Serials Manager: rate</string>
    <string name="rate_dialog_rate_button">Send</string>
    <string name="rate_dialog_cancel_button" translatable="false">@android:string/cancel</string>
    <string name="rate_dialog_title">Rate App</string>
    <string name="rate_dialog_message_hint">Comment</string>


    <!-- External Storage Provider -->
    <string name="external_storage_export_msg_complete" formatted="false">Saved to %s</string>
    <string name="external_storage_export_msg_err">Can\'t export to the file</string>
    <string name="external_storage_import_title_select_file">Select the file</string>
    <string name="external_storage_import_msg_complete" formatted="false">Import complete: %s</string>
    <string name="external_storage_import_msg_err_read">Couldn\'t read the file</string>
    <string name="external_storage_import_msg_err_parse">Couldn\'t import the file</string>
    <string name="external_storage_import_msg_invalid_type">Invalid file type</string>


</resources>
