<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <android.support.v4.view.ViewPager
        android:id="@+id/viewpager"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="230dp"
        android:background="@color/mainBackground"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingTop="4dp">

        <TextView
            android:id="@+id/cancelButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:maxLines="1"
            android:padding="14dp"
            android:text="@string/dialog_button_cancel_text"
            android:textAllCaps="true"
            android:textColor="@color/colorAccent"
            android:textSize="14sp"/>

        <TextView
            android:id="@+id/deleteButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:maxLines="1"
            android:padding="14dp"
            android:text="@string/dialog_button_delete"
            android:textAllCaps="true"
            android:textColor="@color/colorAccent"
            android:textSize="14sp"/>

        <TextView
            android:id="@+id/saveButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:maxLines="1"
            android:padding="14dp"
            android:text="@string/dialog_button_save"
            android:textAllCaps="true"
            android:textColor="@color/colorAccent"
            android:textSize="14sp"/>

    </LinearLayout>

</LinearLayout>