<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/titleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Title"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="#000"/>

    </LinearLayout>

    <me.relex.circleindicator.CircleIndicator
        android:id="@+id/indicator"
        android:padding="12dp"
        android:layout_width="wrap_content"
        android:layout_height="12dp"
        android:layout_gravity="bottom"
        app:ci_drawable="@drawable/indicator_circle_selected"
        app:ci_drawable_unselected="@drawable/indicator_circle"
        app:ci_height="6dp"
        app:ci_width="6dp"/>

    <android.support.v4.view.ViewPager
        android:id="@+id/viewpager"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@color/mainBackground"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingTop="4dp">

        <TextView
            android:id="@+id/cancelButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="14dp"
            android:text="@string/dialog_button_cancel_text"
            android:textAllCaps="true"
            android:textColor="@color/colorAccent"
            android:textSize="14sp"/>

        <TextView
            android:id="@+id/deleteButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="14dp"
            android:text="@string/dialog_button_delete"
            android:textAllCaps="true"
            android:textColor="@color/colorAccent"
            android:textSize="14sp"/>

        <TextView
            android:id="@+id/saveButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="14dp"
            android:text="@string/dialog_button_save"
            android:textAllCaps="true"
            android:textColor="@color/colorAccent"
            android:textSize="14sp"/>

    </LinearLayout>


</LinearLayout>